--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "browser-sync": "^2.12.5",
     "gulp": "^3.9.1",
-    "gulp-less": "^3.0.5"
+    "gulp-less": "^3.0.5",
+    "normalize.css": "^4.1.1"
   }
 }
