--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-less": "^3.0.5",
+    "jp-prefecture": "^0.2.0",
     "normalize.css": "^4.1.1"
+  },
+  "dependencies": {
+    "jp-prefecture": "^0.2.0"
   }
 }
