--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
     "browser-sync": "^2.12.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^2.0.6",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jshint": "^2.0.0",
     "gulp-less": "^3.0.5",
+    "gulp-uglify": "^1.5.3",
     "jp-prefecture": "^0.2.0",
+    "jshint": "^2.9.2",
     "normalize.css": "^4.1.1"
   },
   "dependencies": {
