--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "manifest_version": 2,
-  "name": "Link Checker",
-  "description": "This extension detect broken link and blank link.",
+  "manifest_version": 1.0,
+  "name": "Floaty Color Colock",
+  "description": "Clear time when open new tabs",
   "version": "1.0",
   "icons": {
-    "16": "images/icon/icon_16.png",
-    "48": "images/icon/icon_48.png",
-    "128": "images/icon/icon_128.png"
+    "16": "assets/img/icon/icon_16.png",
+    "48": "assets/img/icon/icon_48.png",
+    "128": "assets/img/icon/icon_128.png"
   },
   "background": {
     "scripts": [
