--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Floaty Color Colock",
+  "name": "Floaty Color Clock",
   "description": "Clear time when open new tabs",
-  "version": "1.0",
+  "version": "1.1",
   "icons": {
     "16": "assets/img/icons/icon_16.png",
     "48": "assets/img/icons/icon_48.png",
@@ -10,7 +10,7 @@
   },
   "background":
     {
-      "scripts": ["assets/js/jquery.min.js", "assets/js/floaty-color-clock.js", "assets/js/jp-prefecture.min.js"],
+      "scripts": ["assets/js/jquery.min.js", "assets/js/floaty-color-clock-chrome.js", "assets/js/jp-prefecture.min.js"],
       "persistent": false
     },
   "chrome_url_overrides": {
